table: fix controlFlowPreventingContentProjection weird warning, and added fallback for table header align

--- a/CK.Ng.Zorro.Basic/Table/Res/variables.less
+++ b/CK.Ng.Zorro.Basic/Table/Res/variables.less
@@ -13,7 +13,7 @@
 
 @ck-table-searchbar-border-radius: @ck-border-radius;
 @ck-table-searchbar-padding: 1%;
-@ck-table-searchbar-border-color: @ck-backoffice-border-color;
+@ck-table-searchbar-border-color: #dddddd;
 @ck-table-searchbar-height: 80%;
 @ck-table-searchbar-icon-font-size: @regular-font-size;
 @ck-table-searchbar-search-icon-color: #9a9a9a;
